# BasicsOfDirectx

./: .gitignore  2Dmodels.cpp  2Dmodels.h  CMakeLists.txt  Camera.cpp  Camera.h  Core.cpp  Core.h  D2D.cpp  D2D.h  D3D.cpp  D3D.h  Direct2D.cpp  Direct2D.h  Direct3D.cpp  Direct3D.h  DirectX.cpp  DirectX.h  DirectXIntroduction.rc.in  DirectxIntroduction.cpp  DirectxIntroduction.h  DirectxIntroduction.rc  DirectxIntroduction.sln  DirectxIntroduction.vcxproj  DirectxIntroduction.vcxproj.filters  Game.cpp  Game.h  LearningDirectX.cpp  LearningDirectX.h  LearningDirectX.rc  LearningDirectX.sln  LearningDirectX.vcxproj  LearningDirectX.vcxproj.filters  Light.cpp  Light.h  Logging.cpp  Logging.h  Main.cpp  Main.h  ModelFormats.cpp  (+20 more)
graphics/: PixelShader.hlsl  VertexShader.hlsl  light.hlsl  pixel.hlsl  pixelL.hlsl  pixelT.hlsl  vertex.hlsl  vertexL.hlsl  vertexT.hlsl
